# youtube-coding

./: .gitignore  README.md
c/blank_counting/: main.c
c/character_counting/: main.c
c/copy_input_to_output/: main.c
c/countdown_timer/: main.c
c/digit_counting/: main.c
c/digital_clock/: a.out  main.c
c/fahrenheit_to_celsius/: main.c
c/file_handling/: main.c
c/fizzbuzz/: main.c
c/input_one_word_per_line/: main.c
c/intro/: main.c
c/leap_year_checker/: main.c
c/line_counting/: main.c
c/measuring_cpu_time/: main.c
c/mini_atm/: main.c
c/number_guessing_game/: main.c
c/password_generator/: .main.c.swp  main.c
c/password_strength_checker/: main.c
c/prime_number_checker/: main.c
c/reverse_string/: a.out  main.c
c/stopwatch/: main.c
c/tab_counting/: main.c
c/taking_user_input/: main.c
c/word_counting/: main.c
rust/async_demo/: Cargo.toml
rust/async_demo/src/: main.rs
rust/basic_logger/: Cargo.toml
rust/basic_logger/src/: main.rs
rust/bufwriter_demo/: Cargo.toml
rust/bufwriter_demo/src/: main.rs
rust/crossterm_crate/: Cargo.toml
rust/crossterm_crate/src/: main.rs
rust/digital_clock/: Cargo.toml
rust/digital_clock/src/: main.rs
rust/figlet_crate/: Cargo.toml
rust/figlet_crate/src/: main.rs
rust/leetcode/: 1  1.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
rust/play_sound/: Cargo.toml
rust/play_sound_from_url/: Cargo.toml
rust/rusqlite_demo/: Cargo.toml
rust/tcp_demo/: Cargo.toml
rust/terminal_size_crate/: Cargo.toml
rust/todo-app/: Cargo.toml
rust/web_scraper/: Cargo.toml
(+7 files in other folders)
