[package]
name = "async_demo"
version = "0.1.0"
edition = "2024"

# Core dependencies accross all the examples
[dependencies]
tokio = { version = "1.49.0", features = ["full"] }

# HTTP
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
